src/css/main.css
html {
    font-family: 'Noto Sans', sans-serif;
    box-sizing: border-box;
    scroll-behavior: smooth;
}
    
*, *:before, *:after {
    box-sizing: inherit;
}

:root {
    --blue: #1DA1F2;
    --bg: #15202B;
    --blue-label: #1A91DA;
    --blue-hover: #1B95E0;
    --grey-font: #8899A6;
    --grey-inputbg: #253341;
    --grey-floating-panel: #192734;
    --grey-floating-panel-hover: #202E3A;
    --red: #D6235B;
    --search-input-width: 700px;
}

body {
    touch-action: manipulation;
    color: white;
    margin: 0px;
    padding: 0px;
    font-size: 16px;
    line-height: 1.5;
    background-color: var(--bg);
}

a, a:visited {
    color: var(--blue-label);
    text-decoration: none;
    transition: 0.2s;
    border-bottom: 1px solid transparent;
}

a:hover, a:active {
    color: var(--blue-hover);
    border-bottom: 1px solid var(--blue-hover);
}

.mention {
    cursor: pointer;
    color: var(--blue-label);
    border-bottom: 1px solid transparent;
}

.mention:hover, .mention:active {
    border-bottom: 1px solid var(--blue-hover);
}

*[data-selected="true"] {
    color: var(--blue);
    border-bottom: 1px solid var(--blue);
}

input[type="search"], input[type="text"], input[type="password"] {
    font-family: inherit;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    outline: 0px;
    border: 1px solid transparent;
}

input[type="search"] {
    transition: 0.2s;
    font-size: inherit;
    width: 700px;
    width: var(--search-input-width);
    max-width: 700px;
    height: 55px;
    color: white;
    background-color: var(--grey-inputbg);
    border: 1px solid var(--bg);
    border-radius: 50px;
    padding: 20px 20px 20px 60px;
    margin-bottom: 30px;
}

input[type="search"]:not(:placeholder-shown) {
    padding-right: 60px;
    padding-left: 25px;
}

input[type="search"]:focus,  input[type="search"]:active, input[type="search"]:hover {
    border: 1px solid var(--blue);
    background-color: var(--bg);
    box-shadow: rgba(4, 74, 111, 1) 0px 0px 30px -10px;
}

input[type="search"]::placeholder {
    color: var(--grey-font);
}

.search-icon {
    position: absolute;
    pointer-events: none;
    fill: var(--grey-font);
    width: 60px;
    left: 0px;

    bottom: 52%;
    padding: 0px 10px 0px 0px;
    transform: translateX(0px);
    -webkit-transform: translateX(0px);
    transition: all 0.3s ease;
    margin-left: 15px;
}

input[type="search"]:not(:placeholder-shown) + .search-icon {
    cursor: pointer;
    pointer-events: all;
    fill: var(--blue);
    margin-left: Calc(var(--search-input-width) - 55px);
}

button {
    font-family: inherit;
    font-size: 1rem;
    color: white;
    display: flex;
    align-items: center;
	justify-content: space-around;
    cursor: pointer;
	width: 150px;
	height: 38px;
	padding: 5px 10px;
    border: 0;
    border-radius: 100px;
	background-color: var(--blue);
	transition: 0.2s;
	transition-timing-function: ease;
	transition-delay: 0.05s;
	opacity: 1;
}

button:hover, button:active {
    opacity: 0.8;
}


.modal {
    z-index: 20;
    position: absolute;
    left: 0; 
    right: 0; 
    width: 500px;
    height: 500px;
    top: 0px;
    bottom: 0;
    margin: auto;
    box-shadow: rgba(4, 74, 111, 0.8) 0px 0px 20px -5px;
}

.screen-fade {
    position: absolute;
    z-index: 18;
    width: 100vw;
    height: 100vh;
    background-color: var(--bg);
    opacity: 0.9;
}

.session-over-modal {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 150px;
    width: 500px;
    padding: 15px;
    border-radius: 15px;
    background-color: var(--grey-floating-panel-hover);

}

header {
    height: 50px;
    display: flex;
    flex-direction: column;
}

.main-container {
    display: flex;
    min-height: 0px;
    justify-content: center;
}

.side-nav-container {
    border-radius: 15px;
    background-color: var(--grey-floating-panel);
    height: 100%;
    width: 300px;
    min-width: 300px;
    margin: 0px 20px 0px 50px;
    font-weight: 700;
}

.side-nav-item {
    display: flex;
    cursor: pointer;
    padding: 20px;
    border-bottom: 1px solid var(--grey-inputbg);
    transition: 0.3s;
}

.side-nav-item[data-selected ="true"]{
    color: var(--blue);
    border-bottom: 1px solid var(--blue);
}

.side-nav-item:last-child {
    border-bottom: 0px;
}

.side-nav-item:hover {
    background-color: var(--grey-floating-panel-hover);
}

.side-nav-item:first-child:hover {
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
    background-color: var(--grey-floating-panel-hover);
}

.side-nav-item:last-child:hover {
    border-bottom-left-radius: 15px;
    border-bottom-right-radius: 15px;
    background-color: var(--grey-floating-panel-hover);
}

.side-nav-item > svg {
    margin-right: 15px;
    fill: white;
}

.side-nav-item[data-selected="true"] > svg {
    fill: var(--blue);
}

.about {
    position: relative;
}

.about-modal {
    position: relative;
    width: 300px;
    height: 300px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--grey-inputbg);
    background-color: var(--bg);
    padding: 50px 20px;
    cursor: default;
    box-shadow: rgba(4, 74, 111, 0.8) 0px 0px 20px -5px;
    border: 1px solid var(--blue);
}

.about-header {
    font-weight: 700;
    font-size: 1.5rem;
    margin-bottom: 30px;
}

.about-text {
    font-weight: 400;
    font-size: 0.9rem;
}

.user-profile {
    position: relative;
    background-color: var(--grey-inputbg);
    border-bottom-left-radius: 15px;
    border-bottom-right-radius: 15px;
}
/* ... */

